@@ -1,5 +1,11 @@
 "558bec6aff68????????64a1????????5081ec780e0000":
 static void KAGE_Filesys_FileManager::LoadArchiveFile(char *path, int unk1, unsigned short unk2);
 
+"558bec53568b75??5785f674":
+__thiscall char* KAGE_Filesys_FileManager::GetExpandedPath(char* filepath);
+
 struct KAGE_Filesys_FileManager  {
 };
+
+"b9(????????)e8????????8946??8bce8b068b40??ffd08ad8":
+reference KAGE_Filesys_FileManager *g_FileManager_kinda;    //needs const offset 0x0006A4D0
