@@ -17,6 +17,10 @@ __thiscall void ModManager::LoadConfigs();
 "538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ecac000000":
 __thiscall void ModManager::UpdateRooms(int id, int mode);
 
+"538bdc83ec0883e4f883c404558b6b??896c24??8bec6aff68????????64a1????????505381ec98000000a1????????33c58945??5657508d45??64a3????????8bf989bd":
+__thiscall void ModManager::TryRedirectPath(std_string* param_1, std_string* param_2);
+
+
 "51568b35????????5768":
 __thiscall void ModManager::Reset();
 
